Fixed json link

--- a/ladder.html
+++ b/ladder.html
@@ -78,7 +78,7 @@
 
     <script>
         async function fetchJson(wordLength) {
-          const response = await fetch(`https://jaymosley07.github.io/WordLadder/word_neighbors/{wordLength}.json`);
+          const response = await fetch(`https://jaymosley07.github.io/WordLadder/word_neighbors/${wordLength}.json`);
           return await response.json();
         }
 
