--- a/ladder.html
+++ b/ladder.html
@@ -71,7 +71,7 @@
     <div class="container">
       <h1>Word Ladder</h1>
       <p>
-        Enter two valid english words with the same length.
+        Input two valid English words of the same length and click "Solve" to discover the shortest path between them, transforming one word into the other by changing a single letter at a time.
       </p>
       <input type="text" id="startWord" placeholder="Enter the first word">
       <input type="text" id="finalWord" placeholder="Enter the final word">
